Fixed ConfigTeamModal, dropdown and notification permission asker on mobile.

--- a/imports/ui/modals/config-team/config-team-modal.scss
+++ b/imports/ui/modals/config-team/config-team-modal.scss
@@ -1,5 +1,5 @@
 .configuration-title {
-  margin: 10px;
+  //margin: 10px;
 }
 .btn-upgrade {
   padding: 1px 12px !important;
