--- a/imports/ui/team/board/board.scss
+++ b/imports/ui/team/board/board.scss
@@ -28,6 +28,7 @@
   transition: all $sidebar-speed ease-in-out;
 
   .sub-header-data {
+    padding: 0px !important;
     display: flex;
   }
   .title {
